Fixed some bugs around spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,9 +13,6 @@ mat-sidenav {
   background-repeat: no-repeat;
   background-size: cover;
   overflow: auto;
-  border-style: solid;
-  border-color: blue;
-  border-width: 1;
 }
 
 // TODO: See comments in footer scss.
